@@ -527,6 +527,9 @@
 
       \item \code{withCallingHandler()} now (again) handles warnings
       even during S4 generic's argument evaluation.  (\PR{16111})
+      
+      \item \code{deparse(..., control = "quoteExpressions")} 
+      incorrectly quoted empty expressions.  (\PR{16686})
     }
   }
 }
